izertis ggplot theme

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
+    ggplot2,
     rmarkdown
 Depends: 
     R (>= 2.10)
